test/corpus/error_recovery.txt
================================================================================
attrset typing field
================================================================================

{
  a = "foo";
  b = 42;
  typing
  c = {};
  d = x: x;
}

--------------------------------------------------------------------------------

(source_expression
  (attrset
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (integer))
    (bind
      (attrpath
        (identifier))
      (ERROR
        (identifier))
      (attrset))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (variable)))))

================================================================================
attrset typing field following string
================================================================================

{
  typing
  inputs.nixpkgs.url = "github:nixos/nixpkgs";
  inputs.nixpkgs-21-05.url = "github:nixos/nixpkgs/nixos-21.05";
}

--------------------------------------------------------------------------------

(source_expression
  (attrset
    (ERROR
      (identifier))
    (bind
      (attrpath
        (identifier)
        (identifier)
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier)
        (identifier)
        (identifier))
      (string))))

================================================================================
attrset typing attrpath
================================================================================

{
  a = "foo";
  b = 42;
  typing.path
  c = {};
  d = x: x;
}

--------------------------------------------------------------------------------

(source_expression
  (attrset
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (integer))
    (bind
      (attrpath
        (identifier)
        (identifier))
      (ERROR
        (identifier))
      (attrset))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (variable)))))

================================================================================
attrset missing value
================================================================================

{
  a = "foo";
  b = 42;
  typing =
  c = {};
  d = x: x;
}

--------------------------------------------------------------------------------

(source_expression
  (attrset
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (integer))
    (bind
      (attrpath
        (identifier))
      (app
        (variable)
        (ERROR)
        (attrset)))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (variable)))))

================================================================================
bind typing parenthesis
================================================================================

{
  a = "foo";
  b = a: 42;
  typing = (a:
  c = {};
  d = x: x;
}

--------------------------------------------------------------------------------

(source_expression
  (attrset
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (integer)))
    (bind
      (attrpath
        (identifier))
      (ERROR
        (function
          (identifier)
          (variable)))
      (attrset))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (variable)))))

================================================================================
let typing field
================================================================================

let
  a = "foo";
  b = 42;
  typing
  c = {};
  d = x: x;
in {}

--------------------------------------------------------------------------------

(source_expression
  (let
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (integer))
    (bind
      (attrpath
        (identifier))
      (ERROR
        (identifier))
      (attrset))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (variable)))
    (attrset)))

================================================================================
let missing value
================================================================================

let
  a = "foo";
  b = 42;
  typing =
  c = {};
  d = x: x;
in
  a

--------------------------------------------------------------------------------

(source_expression
  (let
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (integer))
    (bind
      (attrpath
        (identifier))
      (app
        (variable)
        (ERROR)
        (attrset)))
    (bind
      (attrpath
        (identifier))
      (function
        (identifier)
        (variable)))
    (variable)))

================================================================================
let missing value (last)
================================================================================

let
  a = "foo";
  b = 42;
  typing =
in
  a + b

--------------------------------------------------------------------------------

(source_expression
  (let
    (bind
      (attrpath
        (identifier))
      (string))
    (bind
      (attrpath
        (identifier))
      (integer))
    (ERROR
      (attrpath
        (identifier)))
    (binary
      (variable)
      (variable))))
