test/corpus/path.txt
================================================================================
nix path
================================================================================

[
  <nixpkgs>
  <nixpkgs/foo/bar/baz.nix>
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path)
    (path)))

================================================================================
absolute path simple
================================================================================

[
  /1
  /foo/./bar/../baz
  /.
  /..
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path)
    (path)
    (path)
    (path)))

================================================================================
relative path simple
================================================================================

[
  1/2
  ./foo
  ./..
  ../.
  foo/./bar/../baz
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path)
    (path)
    (path)
    (path)
    (path)))

================================================================================
absolute path interpolation
================================================================================

[
  /${foo}
  /a${foo}
  /a/${foo}
  /a/b${foo}
  /a/b${foo}c
  /a/b${foo}c/d
  /a/b${foo}/c
  /a/b${foo}/${bar}b/${baz}/c${bux}b/c${buz}
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable)))))

================================================================================
relative path interpolation
================================================================================

[
  ./${foo}
  ./a${foo}
  ./a/${foo}
  ./a/b${foo}
  a/b${foo}c
  a/b${foo}c/d
  a/b${foo}/c
  a/b${foo}/${bar}b/${baz}/c${bux}b/c${buz}
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable)))))

================================================================================
home path interpolation
================================================================================

[
  ~/${foo}
  ~/a${foo}
  ~/a/${foo}
  ~/a/b${foo}
  ~/a/b${foo}c
  ~/a/b${foo}c/d
  ~/a/b${foo}/c
  ~/a/b${foo}/${bar}b/${baz}/c${bux}b/c${buz}
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable)))
    (path
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable))
      (interpolation
        (variable)))))

================================================================================
path and division
================================================================================

[
  (1/2)
  (1 /2)
  (1/ 2)
  (1 / 2)
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (parenthesized
      (path))
    (parenthesized
      (app
        (integer)
        (path)))
    (parenthesized
      (binary
        (integer)
        (integer)))
    (parenthesized
      (binary
        (integer)
        (integer)))))

================================================================================
path and update
================================================================================

[
  (1//2)
  (1 //2)
  (1// 2)
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (parenthesized
      (binary
        (integer)
        (integer)))
    (parenthesized
      (binary
        (integer)
        (integer)))
    (parenthesized
      (binary
        (integer)
        (integer)))))

================================================================================
path invalid slash
================================================================================

[
  /foo/
  ./foo/
  ~/bar/baz/
  /${foo}/
  /${foo}/bar/
  /${foo}/bar/${baz}a/
  ./foo//42/
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (path
      (path_invalid_slash))
    (path
      (path_invalid_slash))
    (path
      (path_invalid_slash))
    (path
      (interpolation
        (variable))
      (path_invalid_slash))
    (path
      (interpolation
        (variable))
      (path_invalid_slash))
    (path
      (interpolation
        (variable))
      (interpolation
        (variable))
      (path_invalid_slash))
    (path
      (path_invalid_slash)
      (path_invalid_slash))))

================================================================================
path root is invalid
================================================================================

/

--------------------------------------------------------------------------------

(ERROR)
