test/corpus/string.txt
================================================================================
string
================================================================================

"abcdef"

--------------------------------------------------------------------------------

(source_expression
  (string))

================================================================================
string (complex)
================================================================================

"
${bob} likes crisp $ bills. escape newline \
\${don't interpolate here!}"

--------------------------------------------------------------------------------

(source_expression
  (string
    (interpolation
      (variable))
    (escape_sequence)
    (escape_sequence)))

================================================================================
indented string
================================================================================

''
abc
def
ghi
''

--------------------------------------------------------------------------------

(source_expression
  (indented_string))

================================================================================
indented string (complex)
================================================================================

''
This is just a couple of quotes: '''
A lone $ doesn't throw things off.
And of course, ''\${this shouldn't be an interpolation}.
But ${this} is.
This works, too:  ''$
''

--------------------------------------------------------------------------------

(source_expression
  (indented_string
    (escape_sequence)
    (escape_sequence)
    (interpolation
      (variable))
    (escape_sequence)))

================================================================================
string ($)
================================================================================

[
    "$"
    "$\n"
    "${x}"
    "$${x}"
    "$$${x}"
    "$$$${x}"
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (string)
    (string
      (escape_sequence))
    (string
      (interpolation
        (variable)))
    (string)
    (string
      (interpolation
        (variable)))
    (string)))

================================================================================
indented string ($)
================================================================================

[
    ''$''
    ''$''\n''
    ''${x}''
    ''$${x}''
    ''$$${x}''
    ''$$$${x}''
]

--------------------------------------------------------------------------------

(source_expression
  (list
    (indented_string)
    (indented_string
      (escape_sequence))
    (indented_string
      (interpolation
        (variable)))
    (indented_string)
    (indented_string
      (interpolation
        (variable)))
    (indented_string)))

================================================================================
unterminated string
================================================================================

"foo ${bar} \n

--------------------------------------------------------------------------------

(source_expression
  (string
    (interpolation
      (variable))
    (escape_sequence)
    (MISSING """)))

================================================================================
unterminated string escape
================================================================================

"foo ${bar} \n \
--------------------------------------------------------------------------------

(ERROR
  (interpolation
    (variable))
  (escape_sequence)
  (UNEXPECTED '\0'))
